--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,6 +70,10 @@
         label: "{{ user.name }}"
       when: user.name != ansible_user
 
+# Ansible user module fails to modify currently logged in user as it is 
+# attempting to modify things that did not really change.
+# Workaround is to run usermod manually for the currently logged in user.
+
     - name: Add user to groups, workaround for current user failing
       shell: sudo usermod -g {{ user.group }} -G {{ user.groups }} {{ user.name }}
       with_items:
